Fixed letter spacing

--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -17,7 +17,7 @@
   font-weight: 800;
   font-size: 62px;
   line-height: 75px;
-  letter-spacing: -0.4rem;
+  letter-spacing: -0.04em;
 }
 
 .gpt3__header-content p {
